rolan_1 Frontend - botones actualizados, envío a register.

--- a/frontend/src/app/layout/footer/footer.component.html
+++ b/frontend/src/app/layout/footer/footer.component.html
@@ -105,7 +105,7 @@
           <p class="my-2">919345679 - 690234567</p>
           <button (click)="volverArriba()" class="btn btn_footer">VOLVER ARRIBA</button>
           <p class="mt-2 mb-0 fw-medium text-decoration-underline">GRUPO 4 - DEVELOPERS</p>
-          <p class="my-0">Jana Vasquez - Diana Gómez</p>
+          <p class="my-0">Jana Vasquez - Diana Rojas</p>
           <p class="my-0">Rolando Cepeda - Emilia Alcántara</p>
         </div>
       </div>
