--- a/frontend/src/app/layout/home/home.component.html
+++ b/frontend/src/app/layout/home/home.component.html
@@ -44,20 +44,20 @@
           <img src="/assets/img_home/Tratamientos2.png" class="d-block w-100" alt="Slide 3">
           <h2>Tratamientos</h2>
           <p>Renueva tu look con nuestros cortes y tratamientos exclusivos.</p>
-          <p><a class="btn btn_home" routerLink="/treatments">A UN SOLO CLICK »</a></p>
+          <p><a class="btn btn_home" routerLink="/register">A UN SOLO CLICK »</a></p>
       </div><!-- /.col-lg-4 -->
   
       <div class="col-lg-4">
           <img src="/assets/img_home/Centros2.png" class="d-block w-100" alt="Slide 3">
           <h2>Centros</h2>
           <p>Experiencia única de belleza y bienestar con profesionales.</p>
-          <p><a class="btn btn_home" routerLink="/companies">A UN SOLO CLICK »</a></p>
+          <p><a class="btn btn_home" routerLink="/register">A UN SOLO CLICK »</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
           <img src="/assets/img_home/Categorias2.png" class="d-block w-100" alt="Slide 3">
           <h2>Categorías</h2>
           <p>Explora cortes, uñas y más en nuestra amplia gama de servicios</p>
-          <p><a class="btn btn_home" routerLink="/categories">A UN SOLO CLICK »</a></p>
+          <p><a class="btn btn_home" routerLink="/register">A UN SOLO CLICK »</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
   
