rolan_1 Se añade ruta a category y company form hacia category y company list

--- a/frontend/src/app/features/category/category-form/category-form.component.html
+++ b/frontend/src/app/features/category/category-form/category-form.component.html
@@ -58,7 +58,7 @@
         </div>
 
 
-        <button class="w-100 btn btn-category2 " type="submit"> Guardar </button>
+        <button class="w-100 btn btn-category2 " type="submit" routerLink="/categories"> Guardar </button>
 
       </form>
 
