Imágenes y navegar a lista de companies

--- a/frontend/src/app/features/company/company-form/company-form.component.html
+++ b/frontend/src/app/features/company/company-form/company-form.component.html
@@ -61,7 +61,7 @@
        -->
 
         <div class="d-grid gap-2">
-          <button class="btn btn_company3 mx-5 mb-2 fs-6" type="submit" routerLink="/companies">Enviar</button>
+          <button class="btn btn_company3 mx-5 mb-2 fs-6" type="submit">Enviar</button>
           <button class="btn btn_company3 mx-5 mb-2 fs-6" type="button"
           [routerLink]="['/companies']">Cancelar</button>
 
