--- a/frontend/src/app/features/company/company-detail/company-detail.component.css
+++ b/frontend/src/app/features/company/company-detail/company-detail.component.css
@@ -6,10 +6,13 @@
   /* Otros estilos según sea necesario */
 
 }
-
-.btn_company3{
-  background-color: #CCA831; /* Color de fondo */
-  color:black; /* Color del texto blanco */
-  /* Otros estilos según sea necesario */
-  transition: opacity 0.3s ease; /* Transición de opacidad durante 0.3 segundos */
+.btn_deleted {
+  color: #000000; /* Cambia #FF0000 por tu color personalizado */
+  border-radius: 30px;
+  background-color: #CCA831;
+}
+.btn_deleted:hover {
+  color: #FF0000;/* Cambia el color del texto al pasar el ratón por encima, por ejemplo, a blanco */
+  border-color: red;
+  background-color: #000000; /* Color de fondo al pasar el ratón por encima */
 }
